[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/DialogEditor/Buttons/PathSelect.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/DialogEditor/EditorSettings/EditorSettings.gd" type="Script" id=2]
[ext_resource path="res://addons/DialogEditor/Buttons/CheckBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/DialogEditor/Buttons/LanguageSelecte.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/DialogEditor/Buttons/MultiplePathSelect.tscn" type="PackedScene" id=5]

[node name="EditorSettings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = -10.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
margin_right = 984.0
margin_bottom = 580.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
margin_right = 984.0
margin_bottom = 580.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15

[node name="Title" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
margin_right = 984.0
margin_bottom = 20.0
mouse_filter = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/Title"]
margin_top = 3.0
margin_right = 887.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Dialog Editor Settings"

[node name="SaveSettings" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/Title"]
margin_left = 891.0
margin_right = 932.0
margin_bottom = 20.0
text = "Save"

[node name="ResetSettings" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/Title"]
margin_left = 936.0
margin_right = 984.0
margin_bottom = 20.0
text = "Reset"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 984.0
margin_bottom = 580.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/MarginContainer"]
margin_right = 984.0
margin_bottom = 545.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="SavePath" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 984.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/SavePath"]
margin_top = 5.0
margin_right = 490.0
margin_bottom = 19.0
hint_tooltip = "Defines the Save Path for Dialogs"
mouse_filter = 0
size_flags_horizontal = 3
text = "Save Path"

[node name="PathSelect" parent="MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/SavePath" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 494.0
margin_right = 984.0
margin_bottom = 24.0
default_path = "res://addons/DialogEditor/Saves"
path_name = "Save Path"
current_path = "res://addons/DialogEditor/Saves"

[node name="BakePath" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 984.0
margin_bottom = 58.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/BakePath"]
margin_top = 5.0
margin_right = 490.0
margin_bottom = 19.0
hint_tooltip = "Selects the Root Directory for baking"
mouse_filter = 0
size_flags_horizontal = 3
text = "Bake Path"

[node name="PathSelect" parent="MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/BakePath" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 494.0
margin_right = 984.0
margin_bottom = 24.0
default_path = "res://Dialogs"
path_name = "Bake Path"
current_path = "res://Dialogs"

[node name="SkipEmptyNodes" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 984.0
margin_bottom = 92.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/SkipEmptyNodes"]
margin_top = 5.0
margin_right = 490.0
margin_bottom = 19.0
hint_tooltip = "Skip Nodes that are Empty "
mouse_filter = 0
size_flags_horizontal = 3
text = "Skip Empty Nodes"

[node name="CheckBox" parent="MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/SkipEmptyNodes" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 494.0
margin_right = 984.0
margin_bottom = 24.0
default = true

[node name="DefaultLanguage" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 984.0
margin_bottom = 122.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/DefaultLanguage"]
margin_top = 3.0
margin_right = 490.0
margin_bottom = 17.0
hint_tooltip = "The Default Language Dialogs get Baked to"
mouse_filter = 0
size_flags_horizontal = 3
text = "Default Bake Language"

[node name="LanguageSelect" parent="MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/DefaultLanguage" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 494.0
margin_right = 984.0
margin_bottom = 20.0
default_language = 78

[node name="Templates" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 984.0
margin_bottom = 152.0

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/Templates"]
margin_right = 490.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Node Templates"

[node name="MultiplePathSelect" parent="MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/Templates" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 494.0
margin_right = 984.0
margin_bottom = 20.0

[node name="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/Templates/MultiplePathSelect" index="0"]
margin_right = 490.0

[node name="Name" parent="MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/Templates/MultiplePathSelect/HBoxContainer" index="0"]
margin_right = 470.0

[node name="Add" parent="MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/Templates/MultiplePathSelect/HBoxContainer" index="1"]
margin_left = 474.0
margin_right = 490.0

[node name="Templates" parent="MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/Templates/MultiplePathSelect" index="1"]
margin_right = 490.0

[node name="DialogTemplate" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 162.0
margin_right = 984.0
margin_bottom = 186.0

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/DialogTemplate"]
margin_top = 5.0
margin_right = 490.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Dialog Value Template"

[node name="DialogTemplatePath" parent="MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/DialogTemplate" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 494.0
margin_right = 984.0
margin_bottom = 24.0
default_path = ""
path_name = ""
current_path = "res://addons/DialogEditor/Templates/DialogValueTemplate.json"

[node name="Reset" parent="MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/DialogTemplate/DialogTemplatePath" index="0"]
visible = true
margin_bottom = 24.0

[node name="Path" parent="MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/DialogTemplate/DialogTemplatePath" index="1"]
margin_left = 24.0
margin_right = 462.0
margin_bottom = 24.0
text = "res://addons/DialogEditor/Templates/DialogValueTemplate.json"

[node name="SelectFolder" parent="MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/DialogTemplate/DialogTemplatePath" index="2"]
margin_left = 462.0
margin_right = 490.0
margin_bottom = 24.0

[node name="FileDialog" parent="MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/DialogTemplate/DialogTemplatePath" index="3"]
window_title = "Datei Ã¶ffnen"
mode = 0
filters = PoolStringArray( "*.json ; Template files" )

[editable path="MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/Templates/MultiplePathSelect"]

[editable path="MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/DialogTemplate/DialogTemplatePath"]
